--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,5 @@
-.img {
+img {
     width: 200px;
     height: 150px;
     object-fit: cover;
-    /* width: 40;
-    height: 40;
-    background: #444; */
-    /* overflow: hidden; */
-    /* background-size: cover;
-    background-position: center;
-    margin: 0 auto; */
 }​
