--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,27 @@
 img {
-    width: 200px;
-    height: 150px;
+    width: 400px;
+    height: 400px;
     object-fit: cover;
 }​
+
+h1 {
+    font-size: 30px;
+  }
+  
+h2 {
+    font-size: 30px;
+  }
+
+  h3 {
+    font-size: 30px;
+    font-family: 'Courier New', Courier, monospace;
+  }
+
+p {
+    font-family: "Papyrus", Times, serif;
+    font-size: 24px;
+  }
+
+  body {
+    background-color: gold;
+  }
