added img zoom on hover

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 img {
-    width: 400px;
-    height: 400px;
+    width: 200px;
+    height: 200px;
     object-fit: cover;
 }​
 
@@ -24,4 +24,17 @@ p {
 
   body {
     background-color: gold;
+  }
+  
+  .zoom {
+    transition: transform .2s;
+    width: 200px;
+    height: 200px;
+    margin: 0 auto;
+  }
+  
+  .zoom:hover {
+    -ms-transform: scale(1.5); /* IE 9 */
+    -webkit-transform: scale(1.5); /* Safari 3-8 */
+    transform: scale(1.5); 
   }
