--- a/styles.css
+++ b/styles.css
@@ -1,40 +1,88 @@
 img {
-    width: 200px;
-    height: 200px;
-    object-fit: cover;
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
 }​
 
 h1 {
-    font-size: 30px;
-  }
-  
-h2 {
-    font-size: 30px;
-  }
+  font-size: 30px;
+}
 
-  h3 {
-    font-size: 30px;
-    font-family: 'Courier New', Courier, monospace;
-  }
+h2 {
+  font-size: 30px;
+}
+
+h3 {
+  font-size: 30px;
+  font-family: 'Courier New', Courier, monospace;
+}
 
 p {
-    font-family: "Papyrus", Times, serif;
-    font-size: 24px;
-  }
+  font-family: "Papyrus", Times, serif;
+  font-size: 24px;
+}
 
-  body {
-    background-color: gold;
-  }
-  
-  .zoom {
-    transition: transform .2s;
-    width: 200px;
-    height: 200px;
-    margin: 0 auto;
-  }
-  
-  .zoom:hover {
-    -ms-transform: scale(1.5); /* IE 9 */
-    -webkit-transform: scale(1.5); /* Safari 3-8 */
-    transform: scale(1.5); 
-  }
+body {
+  color: white;
+width: auto;
+}
+
+.zoom {
+  transition: transform .2s;
+  width: 200px;
+  height: 200px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  -ms-transform: scale(1.5); /* IE 9 */
+  -webkit-transform: scale(1.5); /* Safari 3-8 */
+  transform: scale(1.5); 
+}
+
+/* Style the tab */
+.tab {
+overflow: hidden;
+border: 1px solid #ccc;
+
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+background-color: inherit;
+float: left;
+border: none;
+outline: none;
+cursor: pointer;
+padding: 14px 16px;
+transition: 0.3s;
+color: white;
+font-style: bold;
+font-size: 20px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+display: none;
+padding: 6px 12px;
+border-top: none;
+color: white;
+}
+
+.bgimg {
+background-image: url("Cooking.jpg");
+background-attachment: fixed;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+}
